<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>StOnlineSystem</groupId>
  <artifactId>StLibrary</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <dependencies>
	  <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-fxml</artifactId>
		    <version>22-ea+16</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-controls</artifactId>
		    <version>22-ea+16</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
		<dependency>
		    <groupId>com.mysql</groupId>
		    <artifactId>mysql-connector-j</artifactId>
		    <version>8.2.0</version>
		</dependency>
	  <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-storage -->
	  <dependency>
		  <groupId>com.google.cloud</groupId>
		  <artifactId>google-cloud-storage</artifactId>
		  <version>2.32.1</version>
	  </dependency>

	  <!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
	  <dependency>
		  <groupId>com.google.firebase</groupId>
		  <artifactId>firebase-admin</artifactId>
		  <version>9.2.0</version>
	  </dependency>

	  <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
	<dependency>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-compiler-plugin</artifactId>
	    <version>3.12.1</version>
	</dependency>

		<!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
	<dependency>
	    <groupId>org.controlsfx</groupId>
	    <artifactId>controlsfx</artifactId>
	    <version>11.2.0</version>
	</dependency>
	  <!-- https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail -->
	  <dependency>
		  <groupId>com.sun.mail</groupId>
		  <artifactId>jakarta.mail</artifactId>
		  <version>2.0.1</version>
	  </dependency>

	  <!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
	  <dependency>
		  <groupId>jakarta.mail</groupId>
		  <artifactId>jakarta.mail-api</artifactId>
		  <version>2.1.2</version>
	  </dependency>

  </dependencies>
<build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.12.1</version>
            <configuration>
                <source>21</source>
                <target>21</target>
                <compilerArgs>--enable-preview</compilerArgs>
            </configuration>
        </plugin>
    </plugins>
</build>
</project>